4-service/ingress-networking-policy/pod-def.yml
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    app: my-db
    type: back-end

spec:
  containers:
    - name: mysql
      image: mysql
